tools/97_addons/webhook/create-cp4waiops-event-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cp4waiops-event-gateway
  namespace: cp4waiops
  labels:
      app:  cp4waiops-event-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  cp4waiops-event-gateway
  template:
    metadata:
      labels:
        app:  cp4waiops-event-gateway
    spec:
      containers:
      - image: niklaushirt/cp4waiops-event-gateway:2.3
        imagePullPolicy: IfNotPresent
        name: gateway
        command:
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "250m"
            memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name:  cp4waiops-event-gateway-service
  namespace: cp4waiops
spec:
  selector:
    app:  cp4waiops-event-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name:  cp4waiops-event-gateway
  namespace: cp4waiops
spec:
  to:
    kind: Service
    name:  cp4waiops-event-gateway-service
